added sinhala and mm

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -73,5 +73,6 @@
   "next": "Next",
   "moonPhase": "Moon Phase:",
   "selectDate": "Select Date",
-  "selectedDate": "Selected Date:"
+  "selectedDate": "Selected Date:",
+  "moon": "moon"
 }
