--- a/lib/l10n/app_si.arb
+++ b/lib/l10n/app_si.arb
@@ -2,19 +2,19 @@
     "buddhistSun": "විකාල දර්ශකය",
     "noon": "මධ්‍යාහ්නය",
     "dawn": "අරුණ",
-    "timer": "timer", 
+    "timer": "timer",
     "gps": "GPS",
     "settings": "සැකසුම්",
     "help": "උදව්",
     "about": "පිළිබඳ",
-    "licenses": "licenses", 
+    "licenses": "licenses",
     "not_set": "Set කර නැත",
     "solar_noon": "ඉරමුදුන",
-    "gmt_offset": "GMT Offset", 
+    "gmt_offset": "GMT Offset",
     "hours": "පැය",
-    "astronomical_twilight": "Astronomical Twilight", 
-    "nautical_twilight": "Nautical Twilight", 
-    "civil_twilight": "Civil Twilight", 
+    "astronomical_twilight": "Astronomical Twilight",
+    "nautical_twilight": "Nautical Twilight",
+    "civil_twilight": "Civil Twilight",
     "sunrise": "හිරු උදාව",
     "date": "දිනය",
     "current_time": "දැන් වේලාව",
@@ -23,7 +23,7 @@
     "speech_notify": "කථනයෙන් හඟවන්න",
     "screen_always_on": "තිරය නොවසන්න",
     "speech_in_background": "පසුබිමේ කථාව",
-    "volume": "ශබ්ද ප්‍රමාණය", 
+    "volume": "ශබ්ද ප්‍රමාණය",
     "press_wait": "නව GPS සඳහා ඔබා රැඳී සිටින්න",
     "get_gps": "Get GPS",
     "save_gps": "Save GPS",
@@ -31,8 +31,8 @@
     "previous_gps_is": "පෙර GPS අංශක",
     "decimal_number": "දශම සංඛ්යාව",
     "current_offset_is": "Current GMT Offset",
-    "safety": "Safety Buffer", 
-    "none": "none", 
+    "safety": "Safety Buffer",
+    "none": "none",
     "minute1": "1 minute",
     "minutes2": "2 minutes",
     "minutes3": "3 minutes",
@@ -65,7 +65,14 @@
     "about_content": "යනු බෞද්ධ භික්ෂූන් වහන්සේලාට සහ භික්ෂුණීන්ගේ විනයට අදාළවූ ඒ ඒ ස්ථාන සඳහා මධ්‍යාහ්නය දැන ගැනීම සඳහා වූ කුඩා ඇප් එකකි. මම සාමාන්‍යයෙන් අතින් ආහාර ගන්නා නිසා, නිසි මධ්‍යාහ්නය දැන ගැනීමට මට \"hands free\" ක්‍රමයක් අවශ්‍ය විය. මේ ඇප් එකේ ටයිමරය  (timer) කෑමට ඉතිරිව ඇති කාලය දැන ගැනීමට මට උපකාරී වේ. මා මේ ඇප් එක භාවිතා කිරීමෙන් සතුටක් ලබන අතර ඔබටත් එසේ ලැබෙනු ඇතැයි මම බලාපොරොත්තු වෙමි. මෙය වැදගත් වන්නේ ඇයි? බෞද්ධ විනය පිළිපදින අයට මධ්‍යාහ්නයෙන් පසු ආහාර ගැනීමට අවසර නැත. මෙම විනය ක්‍රියාත්මකවන්නේ ඔරලෝසු වේලාවට වඩා හිරු මධ්‍යාහ්නගත වීමට අනුව ය. බුදුන් වහන්සේගේ කාලයේ ඔවුන්ට ඔරලෝසු නොතිබුණි. අට සිල් හෝ දශසිල් අනුගමනය කරන අයට ද  මෙම ඇප් එක ප්‍රයෝජනවත් විය හැකිය. මෙම යෙදුමේ නිරවද්‍යතාවය සත්‍යාපනය කිරීම සඳහා මෙම යොමුව (link) භාවිතා කරන්න. එමඟින් ඔබ ඉන්නා මොහොතත් ස්ථානයත් (\"present moment/location\") පෙන්නුම් කරයි. සඳහා අදහස් කෙරේ.  ",
     "gps_permission_content": "Permission will be requested for GPS use. This allows for Buddhist Sun to know the GPS Location Data to calculate the sun's position. GPS is only collected once for each time the GPS button is pressed.  Data is not sent outside this app.",
     "background_permission_content": "Permission will be requested for background use.  This permission is needed to enable speech notifications to run properly the screen on.  Buddhist Sun will turn off this Background process when the switch is turned off or the app is closed.  Permission will be requested only one time if accepted.",
-    "dstSavingsNotice":"අවවාදයයි, මෙම යෙදුම දිවා ආලෝකය ඉතිරි කිරීමේ කාලය (DST) සඳහා ගණනය නොකරයි. කරුණාකර වෙනස්කම් පිළිබඳව දැනුවත් වන්න. DST සිදු වූ විට, ඔබට GPS හෝ සැකසීම් පටිත්තෙහි ඇති ඕෆ්සෙට් නැවත සැකසීමට අවශ්‍ය වේ.",
-    "dstNoticeTitle":  "දිවා ආලෝකය ඉතුරුම් දැන්වීම"
-
+    "dstSavingsNotice": "අවවාදයයි, මෙම යෙදුම දිවා ආලෝකය ඉතිරි කිරීමේ කාලය (DST) සඳහා ගණනය නොකරයි. කරුණාකර වෙනස්කම් පිළිබඳව දැනුවත් වන්න. DST සිදු වූ විට, ඔබට GPS හෝ සැකසීම් පටිත්තෙහි ඇති ඕෆ්සෙට් නැවත සැකසීමට අවශ්‍ය වේ.",
+    "dstNoticeTitle": "දිවා ආලෝකය ඉතුරුම් දැන්වීම",
+    "verify": "මධ්‍යහ්නය තහවුරු කරන්න.",
+    "rateThisApp": "ශ්‍රේණිගත කරන්න.",
+    "prev": "පිටුපසට",
+    "next": "ඉදිරියට",
+    "moonPhase": "සඳහි මුහුනත:",
+    "selectDate": "දිනය තෝරන්න",
+    "selectedDate": " තෝරපු දිනය:",
+    "moon": "සඳ"
 }
