--- a/lib/l10n/app_th.arb
+++ b/lib/l10n/app_th.arb
@@ -1,6 +1,6 @@
 {
-  "buddhistSun": "พุทธซัน",
-  "noon": "เที่ยง กลางวัน",
+  "buddhistSun": "Buddhist Sun",
+  "noon": "เที่ยงวัน",
   "dawn": "อรุณ",
   "timer": "ตัวจับเวลา",
   "gps": "GPS",
@@ -10,7 +10,7 @@
   "licenses": "ใบอนุญาต",
   "not_set": "ไม่ได้ตั้งค่า",
   "solar_noon": "เที่ยงวัน",
-  "gmt_offset": "ชดเชย GMT",
+  "gmt_offset": "ต่างจาก GMT",
   "hours": "ชั่วโมง",
   "astronomical_twilight": "สนธยาดาราศาสตร์",
   "nautical_twilight": "สนธยาทะเล",
@@ -18,35 +18,35 @@
   "sunrise": "พระอาทิตย์ขึ้น",
   "date": "วันที่",
   "current_time": "เวลาปัจจุบัน",
-  "late": "ช้า",
+  "late": "เลยเที่ยง",
   "time_left": "เหลือเวลา",
   "speech_notify": "แจ้งด้วยคำพูด",
   "screen_always_on": "หน้าจอเปิดตลอดเวลา",
   "speech_in_background": "คำพูดในพื้นหลัง",
   "volume": "ระดับเสียง",
-  "press_wait": "กด_รอ.",
-  "get_gps": "รับจีพีเอส",
-  "save_gps": "บันทึกจีพีเอส",
+  "press_wait": "กด_รอ",
+  "get_gps": "รับ GPS",
+  "save_gps": "บันทึก GPS",
   "set_gps_city": "ตั้งค่า GPS ตามตัวเมือง ",
   "previous_gps_is": "GPS ก่อนหน้าคือ",
   "decimal_number": "เลขทศนิยม",
-  "current_offset_is": "สาขาปัจจุบันคือ",
-  "safety": "ความปลอดภัย",
+  "current_offset_is": "ความต่างจาก GMT ที่ใช้อยู่",
+  "safety": "การตั้งเวลาเผื่อ",
   "none": "ไม่มี",
   "minute1": "1 นาที",
   "minutes2": "2 นาที",
   "minutes3": "3 นาที",
   "minutes4": "4 นาที",
   "minutes5": "5 นาที",
-  "minutes10": "10 นาที่",
+  "minutes10": "10 นาที",
   "pa_auk": "พะอ๊อก",
   "na_uyana": "นะ อุยะนะ",
   "search_for_city": "ค้นหาเมือง",
-  "gps_permission": "การอนุญาตจีพีเอส",
+  "gps_permission": "การอนุญาต GPS",
   "background_permission": "การอนุญาตพื้นหลัง",
   "error": "ข้อผิดพลาด",
   "notification": "การแจ้งเตือน",
-  "running_in_background": "เเสดงเวลาเเบบพุทธในพื้นหลัง",
+  "running_in_background": "เเสดงในพื้นหลัง",
   "background_initialized": "เริ่มต้นพื้นหลังแล้ว",
   "background_enabled": "เปิดใช้งานพื้นหลังแล้ว",
   "background_not_set": "ไม่ได้ตั้งค่าพื้นหลัง",
@@ -56,18 +56,18 @@
   "yes": "ใช่",
   "no": "ไม่",
   "cancel": "ยกเลิก",
-  "gps_not_available": "จีพีเอสไม่พร้อมใช้งาน",
-  "gps_recommend": "แนะนำให้ใช้ GPS เพื่อผลลัพธ์ที่ดีที่สุด.  คุณต้องการตั้งค่า GPS หรือไม่?",
-  "gps_internet_message": "หากอินเทอร์เน็ตเปิดอยู่, ชื่อเมืองสามารถอ้างอิงได้โดย GPS",
-  "language": "ท้องถิ่น",
+  "gps_not_available": "GPS ไม่พร้อมใช้งาน",
+  "gps_recommend": "แนะนำให้ใช้ GPS เพื่อผลลัพธ์ที่ดีที่สุด คุณต้องการตั้งค่า GPS หรือไม่?",
+  "gps_internet_message": "หากอินเทอร์เน็ตเปิดอยู่ ชื่อเมืองสามารถอ้างอิงได้โดย GPS",
+  "language": "ภาษา",
   "theme": "ธีม",
-  "help_content": "การคำนวณ:\n การคำนวณอิงตามสมการจากอัลกอริทึมทางดาราศาสตร์, โดย Jean Meeus.เวลาพระอาทิตย์ขึ้นเเละพระอาทิตย์ตกมีความคลาดเคลื่อนไม่เกิน 1 นาที สำหรับพื้นที่ที่ตั้งอยู่ในระหว่างละติจูด +/- 72°.กรุณาหยุดฉันก่อนเวลาถูกเเจ้ง. \n\nเที่ยงวัน:\n เที่ยงวันจะเเสดงตามเเบบสุริยคติอย่างที่เลือกโดยGPSหรือเมือง เพื่อความสะดวกเเก่การดู.ทุกเวลาสะท้อนความปลอดภัยจากตั้งค่า.  (ดูตามด้านล่าง) \n\nDAWN:\n จอเเสดงอรุณเเสดงในรูปเเบบอรุณที่เลือกไว้จากการตั้งค่าเเละจากการคำนวณทางสุริยคติ.ทุกเวลาสะท้อนความปลอดภัยจากตั้งค่า.  \nพะอ๊อก = (พระอาทิตย์ขึ้น 40 นาที).  \nนา อุยานะ = (พระอาทิตย์ขึ้น 30 นาที) (see belowดูตามด้านล่าง) \n\nGPS:\n จะตั้งค่าเมืองโดยอัตโนมัติหากอินเทอร์เน็ตเปิดอยู่และทำเครื่องหมายในช่อง.ขอแนะนำให้คุณใช้การตั้งค่า GPS สำหรับตำแหน่งของคุณ เนื่องจากเวลาเที่ยงเเบบสุริยคติจะแม่นยำที่สุดด้วยวิธีนี้.สิ่งนี้ไม่ได้ทดสอบด้วย \"Day Light Savings\" locations สถานที่.\n\nการตั้งค่า:\nOffset:\nสิ่งนี้จะถูกตั้งค่าโดยอัตโนมัติเมื่อใช้ GPS.หากคุณใช้การค้นหาเมืองในการตั้งค่า,(GMT +- your local time)คุณต้องเลือกออฟเซ็ต (GMT +- เวลาท้องถิ่นของคุณ). \nความปลอดภัย:\nวิธีนี้จะลบนาทีจากเวลาเที่ยงเพื่อให้เร็วขึ้น และเพิ่มในการขึ้นของอรุณเพื่อทำในภายหลัง.สูตรมีความแม่นยำภายใน 1 นาที ดังนั้นความปลอดภัยเริ่มต้นคือ 1 นาที. \nอรุณ:\nเลือก การขึ้นของอรุณ ที่คุณต้องการ.  นา อุยานะใช้เวลาพระอาทิตย์ขึ้น -30 นาที,และพะอ๊อกใช้เวลาพระอาทิตย์ขึ้น -40 นาที.ความปลอดภัยจะเพิ่ม x-นานี ในเวลานี้. \nTimerตัวจับเวลา:\nหน้าจอตัวจับเวลาช่วยให้สามารถแจ้งเตือนด้วยเสียงแบบแฮนด์ฟรีได้.คำพูด หมายถึง  \"ข้อความเป็นคำพูด\". ระดับเสียงถูกควบคุมโดยแถบเลื่อน. ภายใต้สภาวะปกติ การแจ้งเตือนด้วยเสียงจะทำงานเฉพาะในขณะที่หน้าจอเปิดอยู่เท่านั้น.เพื่อแก้ไขปัญหานี้ คุณสามารถทำให้หน้าจอเปิดอยู่เสมอโดยใช้สวิตช์ \"หน้าจอเปิดตลอดเวลา\", หรือคุณสามารถเปิดใช้งานคุณลักษณะ \"TTS พร้อมปิดหน้าจอ\" ได้.การดำเนินการนี้จะเปิดใช้งานการทำงาน \"พื้นหลัง\" ในขณะที่หน้าจอของคุณปิดอยู่ และป้องกันไม่ให้อุปกรณ์เข้าสู่โหมดสลีป.คุณควรทดสอบคุณลักษณะพื้นหลังนี้สองสามครั้งก่อนที่จะใช้งาน.โทรศัพท์บางรุ่นอาจไม่รองรับเเอปนี้ เราไม่รับผิดชอบต่อสิ่งใดๆ.เมื่อคุณปิดแอปพลิเคชัน,เรียกว่าวิธีเพื่อหยุดงานเบื้องหลัง.  คุณจะรู้ว่าแอปกำลังทำงานในพื้นหลังโดยไอคอนรูปดวงอาทิตย์ที่แสดงที่ด้านบนของพื้นที่แจ้งเตือนในโทรศัพท์ของคุณ (ซึ่งมีเวลาและแถบสัญญาณ).,หากพุทธซันไม่อยู่ใน \"โหมดพื้นหลัง\" คุณจะไม่เห็นไอคอนรูปพระอาทิตย์ ฟีเจอร์นี้ไม่พร้อมใช้งานสำหรับผู้ใช้ iOS.\nการประกาศคำพูดอยู่ในช่วงนาทีต่อไปนี้: 50,40,30,20,15,10,8,6,5,4,3,2,1,0 \n\nPrivacyความเป็นส่วนตัว:\nA full privacy statement is located at คำชี้แจงสิทธิส่วนบุคคลฉบับเต็มอยู่ที่:\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/\n\n We do not collect information เราไม่รวบรวมข้อมูล.",
-  "เกี่ยวกับ_เนื้อหา": "พุทธซันเป็นแอพขนาดเล็กสำหรับพระภิกษุและแม่ชีเพื่อแสดงเวลาเที่ยงวันตามสุริยคติตามความต้องการของพระสงฆ์โดยเฉพาะ.เพราะปกติผมทานข้าวด้วยมือ,ผมจำเป็นต้องมีวิธี \"แฮนด์ฟรี\" เพื่อให้รู้ว่าใกล้เที่ยงวันไหน.ผมสนุกกับการใช้แอพนี้ และผมก็หวังว่าคุณจะชอบเช่นกัน.\n\nทำไมสิ่งนี้ถึงสำคัญ?\nผู้ที่ปฏิบัติตามกฎของสงฆ์จะไม่ได้รับอนุญาตให้รับประทานอาหารหลังเที่ยงวัน.กฎจะขึ้นอยู่กับดวงอาทิตย์ ณ จุดสุดยอดบนท้องฟ้ามากกว่านาฬิกา.พวกเขาไม่มีนาฬิกาในสมัยพุทธกาล.ผู้ที่ปฏิบัติตามศีล 8 หรือ 10 อาจพบว่าแอปนี้มีประโยชน์เช่นกัน.\n\nIแนะนำ https://TimeandDate.com เพื่อตรวจสอบความถูกต้องของแอปนี้.แอปพลิเคชันนี้มีไว้สำหรับการใช้งาน \"ปัจจุบันขณะ/สถานที่\".  \n\nขอให้สิ่งนี้ช่วยให้ถึงพระนิพพานได้อย่างรวดเร็วและปลอดภัย!",
-  "gps_permission_content": "จะมีการขออนุญาตสำหรับการใช้ GPS.ซึ่งช่วยให้พุทธซันทราบข้อมูลตำแหน่ง GPS เพื่อคำนวณตำแหน่งของดวงอาทิตย์ GPS จะถูกรวบรวมเพียงครั้งเดียวในแต่ละครั้งที่มีการกดปุ่ม GPS.  Data is not sent outside this app ข้อมูลจะไม่ถูกส่งไปนอกแอพนี้.",
-  "background_permission_content": "จะมีการขออนุญาตเพื่อใช้ในพื้นหลัง.การอนุญาตนี้จำเป็นสำหรับการเปิดใช้งานการแจ้งเตือนด้วยเสียงเพื่อให้ทำงานบนหน้าจอได้อย่างถูกต้อง.พุทธซันจะปิดกระบวนการพื้นหลังนี้เมื่อปิดสวิตช์หรือปิดแอป.  Permission will be requested only one time if accepted จะขออนุญาตเพียงครั้งเดียวหากได้รับการยอมรับ.",
-  "dstSavingsNotice": "คำเตือน แอปนี้ไม่ได้คำนวณเวลาออมแสง (DST).โปรดทราบถึงการเปลี่ยนแปลง.เกิดขึ้น คุณจะต้องรีเซ็ต GPS หรือออฟเซ็ตที่พบในแท็บการตั้งค่า.",
+  "help_content": "การคำนวณ:\n การคำนวณอิงตามสมการจากอัลกอริทึมทางดาราศาสตร์ที่ถูกคิดค้นโดย Jean Meeus โดยเวลาพระอาทิตย์ขึ้นเเละเวลาพระอาทิตย์ตกดินในพื้นที่ที่ตั้งอยู่ในระหว่างละติจูด +/- 72° นั้นมีความคลาดเคลื่อนไม่เกิน 1 นาที โปรดพิจาราณาหยุดฉันก่อนเวลาดังกล่าว \n\nเที่ยงวัน:\n จอแสดงเที่ยงวันจะเเสดงตามเเบบสุริยคติของวันนั้นๆ ตามที่ถูกกำหนดโดย GPS หรือเมือง ทั้งนี้เพื่อให้ท่านดูเวลาได้อย่างสะดวก ทุกเวลาที่แสดงในแอปนี้ขึ้นอยู่กับค่าที่ตั้งไว้ในโหมดการตั้งเวลาเผื่อในการตั้งค่า (ดูตามด้านล่าง) \n\nDAWN:\n จอเเสดงอรุณจะเเสดงในรูปเเบบอรุณที่เลือกไว้จากการตั้งค่าเเละจากการคำนวณทางสุริยคติ ทุกเวลาที่แสดงในแอปนี้ขึ้นอยู่กับค่าที่ตั้งไว้ในโหมดการตั้งเวลาเผื่อในการตั้งค่า \nพะอ๊อก = (ก่อนพระอาทิตย์ขึ้น 40 นาที) \nนา อุยานะ = (ก่อนพระอาทิตย์ขึ้น 30 นาที) (see below ดูตามด้านล่าง)\n\nGPS:\n GPS จะตั้งค่าเมืองโดยอัตโนมัติหากอินเทอร์เน็ตเปิดใช้งานอยู่และทำเครื่องหมายในช่อง ขอแนะนำให้คุณใช้การตั้งค่า GPS ระบุตำแหน่งของคุณ เนื่องจากเวลาเที่ยงเเบบสุริยคติจะแสดงผลแม่นยำที่สุดด้วยวิธีนี้ โหมดนี้ไม่ได้ถูกทดสอบด้วยตำแหน่งที่ตั้งที่เป็น \"เวลาออมแสง\" \n\nการตั้งค่า: \nOffset:\n โหมดนี้จะถูกตั้งค่าโดยอัตโนมัติเมื่อใช้ GPS หากคุณใช้การค้นหาเมืองในการตั้งค่า (GMT +- your local time) คุณต้องเลือกความต่างจาก GMT (GMT +- เวลาท้องถิ่นของคุณ) \nความปลอดภัย:\n วิธีนี้จะลบนาทีจากเวลาเที่ยงเพื่อให้เร็วขึ้น และบวกเวลาอรุณขึ้นเพื่อเผื่อเวลาในภายหลัง เนื่องด้วยสูตรมีความแม่นยำภายใน 1 นาที ดังนั้นการตั้งเวลาเผื่อเริ่มต้นคือ 1 นาที \nอรุณ:\n เลือกเวลาการขึ้นของอรุณ ที่ต้องการ นา อุยานะใช้เวลาพระอาทิตย์ขึ้น -30 นาที และพะอ๊อกใช้เวลาพระอาทิตย์ขึ้น -40 นาที ความปลอดภัยจะเพิ่ม x-นาที ในเวลานี้ \nTimer ตัวจับเวลา:\nหน้าจอตัวจับเวลาช่วยในการแจ้งเตือนด้วยเสียงแบบไม่ต้องใช้มือควบคุม คำพูด หมายถึง \"เปลี่ยนจากข้อความเป็นคำพูด\" ระดับเสียงถูกควบคุมโดยแถบเลื่อน และในสภาวะปกติ การแจ้งเตือนด้วยเสียงจะทำงานเฉพาะในขณะที่หน้าจอเปิดอยู่เท่านั้น เพื่อแก้ไขปัญหานี้ คุณสามารถตั้งค่าให้หน้าจอให้เปิดอยู่เสมอโดยเลือกสวิตช์ \"หน้าจอเปิดตลอดเวลา\" หรือคุณสามารถเปิดใช้งานโหมด \"TTS พร้อมปิดหน้าจอ\" ก็ได้ ซึ่งการตั้งค่าแบบนี้จะเปิดใช้งานการทำงาน \"พื้นหลัง\" ในขณะที่หน้าจอของท่านปิดอยู่ และป้องกันไม่ให้อุปกรณ์เข้าสู่โหมดสลีป (พักเครื่อง) ท่านควรทดสอบโหมดพื้นหลังนี้สองถึงสามครั้งก่อนที่จะใช้งานจริง โทรศัพท์บางรุ่นอาจไม่รองรับเเอปนี้ ซึ่งเราจะไม่รับผิดชอบต่อกรณีใดๆ ทั้งสิ้น เมื่อท่านปิดแอปพลิเคชัน งานที่ทำอยู่เบื้องหลังจะหยุดทำงาน ท่านจะรู้ว่าแอปกำลังทำงานในเบื้องหลังโดยสังเกตจากไอคอนรูปดวงอาทิตย์ที่แสดงที่ด้านบนของพื้นที่แจ้งเตือนในโทรศัพท์ของท่าน (ซึ่งอยู่ใกล้กับเวลาและแถบสัญญาณ) หากแอป Buddhist Sun ไม่อยู่ใน \"โหมดพื้นหลัง\" ท่านจะไม่เห็นไอคอนรูปพระอาทิตย์ อย่างไรก็ตามฟีเจอร์นี้ไม่พร้อมใช้งานสำหรับผู้ใช้ iOS\nการประกาศคำพูดอยู่ในช่วงนาทีต่อไปนี้: 50,40,30,20,15,10,8,6,5,4,3,2,1,0 \n\nPrivacy ความเป็นส่วนตัว:\nA full privacy statement is located at อ่านคำชี้แจงสิทธิส่วนบุคคลฉบับเต็มได้ที่:\n https://americanmonk.org/privacy-policy-for-buddhist-sun-app/ \n\n We do not collect information เราไม่เก็บข้อมูลส่วนตัวของผู้ใช้แอปนี้ในทุกกรณี",
+  "เกี่ยวกับ_เนื้อหา": "Buddhist Sun เป็นแอปขนาดเล็กสำหรับพระภิกษุ ภิกษุณี แม่ชี และผู้ปฏิบัติตามพระวินัยเพื่อแสดงเวลาเที่ยงวันตามสุริยคติตามความต้องการของผู้ใช้งาน เพราะปกติข้าพเจ้าฉันข้าวด้วยมือ เลยต้องมีวิธี \"แฮนด์ฟรี\" (การสั่งให้แอปทำงานโดยไม่ต้องใช้มือควบคุม) เพื่อให้รู้ว่าใกล้เที่ยงวันแล้วหรือไม่ การเปิดตัวจับเวลาและการแจ้งเตือนด้วยเสียงทำให้ข้าพเจ้าทราบว่าเหลือเวลาฉันภัตตาหารก่อนเที่ยงอีกเท่าไหร่ ข้าพเจ้าชอบใช้แอปนี้ และหวังว่าพวกท่านทั้งหลายก็คงจะชอบเช่นกัน \n\nทำไมสิ่งนี้ถึงสำคัญ?\n สำหรับผู้ที่ปฏิบัติตามพระวินัย ท่านไม่อนุญาตให้ฉันหลังเที่ยงวัน โดยพระวินัยให้ยึดตามดวงอาทิตย์บนท้องฟ้า ณ จุดที่ตรงศีรษะมากกว่าการดูนาฬิกาเพราะในสมัยพุทธกาลนั้นไม่มีนาฬิกา ดังนั้น นอกจากพระภิกษุแล้ว ผู้ที่ปฏิบัติศีล 8 หรือ 10 ก็อาจเห็นว่าแอปนี้มีประโยชน์เช่นกัน \n\nI ข้าพเจ้าขอแนะนำ https://TimeandDate.com เพื่อตรวจสอบความถูกต้องแม่นยำของเวลาในแอปนี้ แอปพลิเคชันนี้มีไว้สำหรับการใช้งาน \"เวลา/สถานที่ที่ใช้ ณ ปัจจุบัน\" \n\n ขอให้แอปนี้เป็นเครื่องอำนวยความสะดวกต่อการปฏิบัติของท่านทั้งหลายเพื่อให้ถึงพระนิพพานโดยเร็วและปลอดภัย!",
+  "gps_permission_content": "จะมีการขออนุญาตสำหรับการใช้ GPS ซึ่งช่วยให้ Buddhist Sun ทราบข้อมูลตำแหน่ง GPS เพื่อคำนวณตำแหน่งของดวงอาทิตย์ ซึ่ง GPS จะถูกรวบรวมเพียงครั้งเดียวในแต่ละครั้งที่มีการกดปุ่ม GPS  Data is not sent outside this app ข้อมูลจะไม่ถูกส่งออกไปนอกแอปนี้",
+  "background_permission_content": "จะมีการขออนุญาตเพื่อใช้ในพื้นหลัง การอนุญาตนี้จำเป็นต่อการเปิดใช้งานการแจ้งเตือนด้วยเสียงเพื่อให้แอปทำงานบนหน้าจอได้อย่างถูกต้อง Buddhist Sun จะปิดโหมดพื้นหลังนี้เมื่อปิดสวิตช์หรือปิดแอป Permission will be requested only one time if accepted แอปจะขออนุญาตเพียงครั้งเดียวหากได้รับการยอมรับ",
+  "dstSavingsNotice": "คำเตือน แอปนี้ไม่ได้คำนวณเวลาออมแสง (DST) โปรดทราบถึงการเปลี่ยนแปลงที่เกิดขึ้น คุณจะต้องรีเซ็ต GPS หรือออฟเซ็ตที่พบในแท็บการตั้งค่า",
   "dstNoticeTitle": "ประกาศเรื่องการปรับเวลาตามฤดูกาล",
-  "verify": "ยืนยันเที่ยง.",
+  "verify": "ยืนยันเที่ยง",
   "rateThisApp": "ให้คะแนนแอปนี้",
   "prev": "ก่อนหน้า",
   "next": "ต่อไป",
